# Ex7Server

./: ActiveGame.cpp  ActiveGame.h  CMakeLists.txt  CloseGameCommand.cpp  CloseGameCommand.h  Command.cpp  Command.h  CommandsManager.cpp  CommandsManager.h  ExitServerCommand.cpp  ExitServerCommand.h  GameManager.cpp  GameManager.h  JoinGameCommand.cpp  JoinGameCommand.h  ListGameCommand.cpp  ListGameCommand.h  MakeStepCommand.cpp  MakeStepCommand.h  ModifiedCommandMap.cpp  ModifiedCommandMap.h  NewGameCommand.cpp  NewGameCommand.h  PlayerAddress.cpp  PlayerAddress.h  ReversiGameManager.cpp  ReversiGameManager.h  Server.cpp  Server.h  Task.cpp  Task.h  ThreadPool.cpp  ThreadPool.h  main.cpp
